--- a/polaris-core/Cargo.toml
+++ b/polaris-core/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2024"
 anyhow = "1.0.98"
 crossbeam-channel = "0.5.15"
 futures = "0.3.31"
-tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread"] }
+tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
