--- a/polaris-core/Cargo.toml
+++ b/polaris-core/Cargo.toml
@@ -9,4 +9,5 @@ crossbeam-channel = "0.5.15"
 edit-distance = "2.1.3"
 futures = "0.3.31"
 petgraph = "0.8.2"
+rustc-hash = "2.1.1"
 tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
